@@ -1,10 +1,23 @@
 export const style = {
-  mainContainer: {
+  appBarSearch: {
+    borderRadius: 1,
+    marginBottom: '1rem',
+    display: 'flex',
+    padding: '16px',
+  },
+  pagination: {
+    borderRadius: 1,
+    marginTop: '1rem',
+    padding: '16px',
+  },
+  gridContainer: {
     flexDirection: {
       xs: "column-reverse",
-      sm: "column-reverse",
       md: "row"
     }
+  },
+  chip: {
+    margin: '10px 0',
   }
 }; 
 
