@@ -1,0 +1,5 @@
+export const style = {
+  ul: {
+    justifyContent: 'space-around',
+  }
+};
