@@ -1,0 +1,11 @@
+import React from 'react'
+
+const PostDetails = () => {
+  console.log("Post details")
+  
+  return (
+    <div>PostDetails</div>
+  )
+}
+
+export default PostDetails
