@@ -1,12 +1,18 @@
 export const POST = {
-  fetchAll: 'FETCH_ALL',
-  create: 'CREATE',
-  update: 'UPDATE',
-  delete: 'DELETE',
-  like: 'LIKE'
+  fetchAll: 'FETCH_ALL_POSTS',
+  create: 'CREATE_POST',
+  update: 'UPDATE_POST',
+  delete: 'DELETE_POST',
+  like: 'LIKE_POST'
 }
 
 export const AUTH = {
   auth: 'AUTH',
   logout: 'LOGOUT'
+}
+
+export const TAGS = {
+  fetchAll: 'FETCH_ALL_TAGS',
+  create: 'CREATE_TAG',
+  delete: 'DELETE_TAG',
 }
