@@ -1,6 +1,7 @@
 import mongoose from 'mongoose';
 import PostMessage from '../models/postMessage.js'
 
+
 export const getPosts = async (req, res) => {
   try {
     const postMesages = await PostMessage.find();
