@@ -6,4 +6,8 @@ Changes over the original code:
 
 -Inside the store I have the auth->authData which is always refering to the user localy saved (the reducer saves and deletes the localStorage, while updating the entry). Instead of following the video and doing multiple calls to read the storage, I should just read the state.
 
+-Router was updated and there is no more <Redirect /> component (changed for <Navigate />)
+
 -Aesthetic changes (background, some colors, icon?)
+
+-Added a tag collection to the db so that I could exchange chips input to autocomplete
